--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "calendar-app",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "an online calendar app",
   "engines": {
     "node": ">= 7.0.0"
   },
@@ -32,7 +32,7 @@
       "git add"
     ]
   },
-  "author": "Fullstack Academy of Code",
+  "author": "Beth Barnes",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
